--- a/page4.html
+++ b/page4.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-rmZx6NOr2H" id="header16-o">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rmZx6NOr2H" id="header16-o">
 
     
 
@@ -120,7 +120,7 @@
     </div>
 </section>
 
-<section class="footer3 cid-rmZx855Yt4" id="footer3-q">
+<section class="footer3 cid-rmZx855Yt4 mbr-reveal" id="footer3-q">
 
     
 
@@ -152,9 +152,9 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">&nbsp;</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EJLajbCGIqLU6wOSszmzPT77Lh9QDaRns/9TGuE5J+OXYLb+QKU/0BP6wBPAWAm17teF00r/QUJcwn7ZVoD81lvEA4gJATot3vatuPGQjlAXLmudPlvtc1FLti3bCogy">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="i7raCpMG1qCYj6smWTHINioW3tMq19kXq+MFy+Ql8bqPII5yTqeLq8nmOJWh2ArU8BjA2nXwKodTT1VBk9oSmBZmwLMjOpi84WaRd5r/+4/zQTtDvQLah2HzAxX5Rh0h">
                         <div class="row form-inline justify-content-center">
-                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+                            <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! You will be contacted shortly.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                             <div class="col-auto form-group " data-for="email">
                                 <input type="email" name="email" placeholder="Email" data-form-field="Email" required="required" class="form-control input-sm input-inverse my-2 display-7" id="email-footer3-q">
                             </div>
-                            <div class="col-auto input-group-btn  m-2"><button type="submit" class="btn btn-primary m-0 display-4">Subscribe</button></div>
+                            <div class="col-auto input-group-btn  m-2"><button type="submit" class="btn btn-primary m-0 display-4"></button></div>
                         </div>
                     </form><!---Formbuilder Form--->
                 </div>
