--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header1 cid-rmZtfS7ESl" id="header16-d">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header1 cid-rmZtfS7ESl" id="header16-d">
 
     
 
@@ -147,7 +147,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">&nbsp;</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qwb6VweZEWwqjZ7Jr06CBDWPqaSg7pixWXe2vOdhjh4jhG2G3iPTS0DJ6k8yycHLWTtD8ITNRqJ/tYCu8nU8D4ZEOahFteQJiVYOamOcclOcU7lq2SbOvIB9qOwLEe2o">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zjYik7pNqky28L6nT8srlEti78I2GiXNxwz7My98w4+oeV5tfI4j4iWkTnIQkC3m3FRCt5C2DpEeLbU0kXfvCXR0uMRVa+B5yjxLo72atNqi1mK/rc7SnZroGRQMsjT/">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
