create github pages

--- a/page1.html
+++ b/page1.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="header1 cid-rmZr5e9BwS" id="header16-a">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="header1 cid-rmZr5e9BwS" id="header16-a">
 
     
 
@@ -82,7 +82,7 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Before You Go Bankrupt</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">The Trustee is not your advocate. The Trustee is an intermediary between you and your creditors and therefore cannot prefer your interests over those of your creditors.<br>.
-<div>If there is no prior bankruptcy - and no one opposes your disxcharge from bankruptcy, you will be eligible for discharge in 9 mohtns, if no surplus income is owned or 21 months if surplus income is owed,</div><br><div>Surplus income is any income a bankrupt earns above what the government establishes to be the minimum amount of income needed to satisfy your basic needs.</div><br><div>With a few exceptions - you must surrender your property to the Trustee.</div><br><br><div>Certain debts such as child and spousal support, student loans and certain judgments will continue to exist after bankruptcy.</div></h3>
+<div>If there is no prior bankruptcy - and no one opposes your discharge from bankruptcy, you will be eligible for discharge in 9 months.</div><br><div>Time for discharge may be extended to 21 months if surplus income is owed,</div><br><div>Surplus income is any income a bankrupt earns above what the government establishes to be the minimum amount of income needed to satisfy your basic needs.</div><br><div>With a few exceptions - you must surrender your property to the Trustee.</div><br><div>Certain debts such as child and spousal support, student loans and certain judgments will continue to exist after bankruptcy.</div></h3>
                 
             </div>
         </div>
@@ -108,7 +108,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qVfkKzvc3anF3HwNJZzPxFNZmuq61jn1bCrapN0KBYmAZ/cH4mAzMl90uG65GrbFvQOXHPmdOqsr2qZomLeljTVwc51E3Q62Qba7PdXfGC9GQvdMXmY6m1MgCHDGupzE">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hoZK/P6VN5JHtiPPCUW4g7AxAxRm/4MWbu5sRtEZ72uYCxDGwPODnzsbVz7qL4GaO82GF6DOhPs7b9mTWqvJv78tqsglsOLQmUDp9rv3EdawtfygCxZxqRF0o9Xaw6on">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -145,7 +145,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="page1.html">Bankruptcy </a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="page2.html">Student Loan</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="page4.html">Discharge</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="page3.html">Proposal</a></p><p><br></p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-6"><p><a href="page1.html">Bankruptcy</a></p><p><a href="page2.html">Student Loan</a></p><p><a href="page4.html">Discharge</a></p><p><a href="page3.html">Proposal</a></p></div>
         </div>
     </div>
 </section>
